<resources>
    <string name="app_name">QuizApp</string>
    <string name="log_in">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="password">Enter Password</string>
    <string name="email">Enter Email</string>
    <string name="login">LOGIN</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="sign_up">Sign Up</string>
</resources>